--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Sonali Negi" />
+    <meta
+      name="description"
+      content="This is a solution to the Stats preview card component challenge on Frontend Mentor"
+    />
     <!-- displays site properly based on user's device -->
 
     <link
@@ -20,58 +25,63 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap"
       rel="stylesheet"
     />
-    <!-- css links -->
-    <link type="text/css" rel="stylesheet" href="css/desktop.css" />
-    <link type="text/css" rel="stylesheet" href="css/mobile.css" />
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <!-- CSS link -->
+    <link type="text/css" rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="card">
-      <div class="content">
-        <div class="business-insights">
-          <h1 class="main-heading">
-            Get
-            <p class="heading-accent">insights</p>
-            that help your business grow.
-          </h1>
-          <p class="main-paragraph">
-            Discover the benefits of data analytics and make better decisions
-            regarding revenue, customer experience, and overall efficiency.
-          </p>
+    <main>
+      <div class="card">
+        <div class="card__img">
+          <picture>
+            <source
+              srcset="./images/image-header-desktop.jpg"
+              media="(min-width: 900px)"
+            />
+
+            <source srcset="./images/image-header-mobile.jpg" />
+
+            <img
+              src="./images/image-header-desktop.jpg"
+              alt="Office image"
+              class="card__image--mask"
+            />
+          </picture>
         </div>
-        <div class="statics">
-          <div>
-            <p class="Stats">10k+</p>
-            <h4 class="stat-heading">COMPANIES</h4>
+
+        <div class="card__content">
+          <div class="business-insights">
+            <h3 class="business-insights__heading">
+              Get
+              <span class="business-insights__accent">insights</span>
+              that help your business grow.
+            </h3>
+            <p class="business-insights__paragraph">
+              Discover the benefits of data analytics and make better decisions
+              regarding revenue, customer experience, and overall efficiency.
+            </p>
           </div>
-          <div>
-            <p class="Stats">314</p>
-            <h4 class="stat-heading">TEMPLATES</h4>
-          </div>
-          <div>
-            <p class="Stats">12M+</p>
-            <h4 class="stat-heading">QUERIES</h4>
-          </div>
+          <ul class="card-stats">
+            <li>
+              <p class="card-stats__number">10k+</p>
+              <span class="card-stats__name">Companies</span>
+            </li>
+            <li>
+              <p class="card-stats__number">314</p>
+              <span class="card-stats__name">Templates</span>
+            </li>
+            <li>
+              <p class="card-stats__number">12M+</p>
+              <span class="card-stats__name">Queries</span>
+            </li>
+          </ul>
         </div>
       </div>
-
-      <div class="desktop-image">
-        <div class="image"></div>
-      </div>
-    </div>
-
-    <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+    </main>
+    <footer class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="https://github.com/SONALI-NEGI">Sonali Negi</a>.
+    </footer>
   </body>
 </html>
